# TopAlbum

./: README.md  pyproject.toml
tests/: test_topalbum.py
topalbum/: app.py  spotify_auth.py
topalbum/templates/: index.html
